--- a/Russian/main/PIM.apk/res/values-ru/arrays.xml
+++ b/Russian/main/PIM.apk/res/values-ru/arrays.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<!--Decompiled by BART-R (BurgerZ <az.burgerz@gmail.com)>--><resources>
     <string-array name="t9_sort_entries">
         <item>@string/t9_sort_name</item>
         <item>@string/t9_sort_number</item>
