--- a/Russian/main/PIM.apk/res/values-ru/plurals.xml
+++ b/Russian/main/PIM.apk/res/values-ru/plurals.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<!--Decompiled by BART-R (BurgerZ <az.burgerz@gmail.com)>--><resources>
     <plurals name="listTotalPhoneContacts">
         <item quantity="other">Контактов с номерами телефонов: %d</item>
         <item quantity="one">1 контакт с номером телефона</item>
@@ -36,10 +36,6 @@
         <item quantity="other">Голосовых сообщений: %1$d</item>
         <item quantity="one">Голосовое сообщение</item>
     </plurals>
-    <plurals name="searchFoundCalllogs">
-        <item quantity="other">Журналов: %d</item>
-        <item quantity="one">Журналов: 1</item>
-    </plurals>
     <plurals name="confirm_delete_conversation">
         <item quantity="other">Будет удалено %1$s цепочек</item>
         <item quantity="one">Одна цепочка будет удалена</item>
@@ -55,6 +51,10 @@
     </plurals>
     <plurals name="recipient_count">
         <item quantity="other">Контактов: %1$s</item>
+    </plurals>
+    <plurals name="searchFoundCalllogs">
+        <item quantity="other">Журналов: %d</item>
+        <item quantity="one">Журналов: 1</item>
     </plurals>
     <plurals name="read_report_toast_msg">
         <item quantity="other">отправка %d отчетов о прочтении</item>
