--- a/Russian/main/PIM.apk/res/values-ru/plurals.xml
+++ b/Russian/main/PIM.apk/res/values-ru/plurals.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--Decompiled by BART-R (BurgerZ <az.burgerz@gmail.com)>--><resources>
+<resources>
     <plurals name="listTotalPhoneContacts">
         <item quantity="other">Контактов с номерами телефонов: %d</item>
         <item quantity="one">1 контакт с номером телефона</item>
