--- a/Russian/main/LewaYellowPages.apk/res/values-ru/arrays.xml
+++ b/Russian/main/LewaYellowPages.apk/res/values-ru/arrays.xml
@@ -1,25 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="yellowpages_group_items_frequently_phone">
-        <item>Избранное</item>
-        <item>Доставка</item>
+    <string-array name="yellowpages_group_items">
+        <item>Доставка еды</item>
+        <item>Гостиницы</item>
         <item>Логистика</item>
         <item>Банк</item>
-        <item>Автомобильный сервис</item>
-        <item>Торговля</item>
-        <item>Авиация</item>
-        <item>Телефоны</item>
-        <item>Жалобы</item>
-        <item>Полиция</item>
-    </string-array>
-    <string-array name="yellowpages_group_items_living_service">
+        <item>Поезда/Авиация</item>
+        <item>Уборка</item>
         <item>Переезд</item>
+        <item>Работа</item>
+        <item>Техника</item>
+        <item>Вождение</item>
+        <item>Электроэнергия</item>
+        <item>Образование</item>
+        <item>Горячие линии</item>
+        <item>Избранное</item>
+    </string-array>
+    <array name="yellowpages_nearby_categoty_items">
+        <item>Лакомка</item>
+        <item>Лакомка</item>
+        <item>Магазины</item>
+        <item>Отделения банков</item>
+        <item>Продажа билетов</item>
         <item>Домохозяйство</item>
-        <item>Ремонт техники</item>
-        <item>Ремонт телефонов</item>
-        <item>Службы</item>
-        <item>Вакансии</item>
-    </string-array>
+        <item>Переезд</item>
+        <item>Кадровые агентства</item>
+        <item>@null</item>
+        <item>@null</item>
+        <item>@null</item>
+        <item>@null</item>
+        <item>@null</item>
+        <item>@null</item>
+    </array>
 
 
 
@@ -68,27 +80,4 @@
 
 
 
-
-
-
-
-
-
-
-
-    <string-array name="hot_cities">
-        <item>Пекин</item>
-        <item>Чунцин</item>
-        <item>Чэнду</item>
-        <item>Гуанчжоу</item>
-        <item>Ханчжоу</item>
-        <item>Нанкин</item>
-        <item>Шанхай</item>
-        <item>Шэньчжэнь</item>
-        <item>Сучжоу</item>
-        <item>Шэньян</item>
-        <item>Тяньцзинь</item>
-        <item>Ухань</item>
-        <item>Сиань</item>
-    </string-array>
 </resources>
