--- a/Russian/main/OupengBrowser.apk/res/values-ru/arrays.xml
+++ b/Russian/main/OupengBrowser.apk/res/values-ru/arrays.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
 <string-array name="predefined_websites_default_optr">
 <item>Google</item>
 <item>https://www.google.ru/</item>
@@ -27,3 +29,4 @@
 <item>http://www.avito.ru/</item>
 <item>site_navigation_default_default9</item>
 </string-array>
+</resources>
