--- a/Russian/main/EngineerModeSim.apk/res/values-ru/arrays.xml
+++ b/Russian/main/EngineerModeSim.apk/res/values-ru/arrays.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="Input_mode">
-        <item>Пользовательский ввод</item>
+        <item>Пользовательский</item>
         <item>Читать с SIM</item>
     </string-array>
 </resources>
