--- a/Russian/main/Phone.apk/res/values-ru/arrays.xml
+++ b/Russian/main/Phone.apk/res/values-ru/arrays.xml
@@ -1,5 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<!--Decompiled by BART-R (BurgerZ <az.burgerz@gmail.com)>--><resources>
+
+
+
+
+    <string-array name="outgoing_call_entries">
+        <item>Выкл.</item>
+        <item>Международный вызов</item>
+        <item>Все, кроме дома</item>
+        <item>Все</item>
+    </string-array>
+    <string-array name="incoming_call_entries">
+        <item>Выкл.</item>
+        <item>Роуминг</item>
+        <item>Все</item>
+    </string-array>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <string-array name="gemini_sim_roaming_reminder_entries">
         <item>Первый раз</item>
         <item>Всегда</item>
@@ -34,63 +108,129 @@
         <item>Русский</item>
         <item>Исландский</item>
     </string-array>
-    <string-array name="plmn_prefer_network_mode_choices">
-        <item>GSM</item>
-        <item>WCDMA</item>
-        <item>Двойной режим</item>
-    </string-array>
-    <string-array name="plmn_prefer_network_mode_td_choices">
-        <item>GSM</item>
-        <item>TD-SCDMA</item>
-        <item>Двойной режим</item>
-    </string-array>
-    <string-array name="plmn_prefer_network_mode_values">
-        <item>0</item>
-        <item>1</item>
-        <item>2</item>
-    </string-array>
-    <string-array name="gsm_umts_network_preferences_choices">
-        <item>GSM/WCDMA (авторежим)</item>
-        <item>Только WCDMA</item>
-        <item>Только GSM</item>
-    </string-array>
-    <string-array name="gsm_umts_network_preferences_values">
-        <item>0</item>
-        <item>2</item>
-        <item>1</item>
-    </string-array>
-    <string-array name="gsm_umts_network_preferences_choices_cmcc">
-        <item>GSM/TD-SCDMA (авторежим)</item>
-        <item>Только TD-SCDMA</item>
-        <item>Только GSM</item>
-    </string-array>
-    <string-array name="umts_network_preferences_choices">
-        <item>GSM/WCDMA (авторежим)</item>
-        <item>Только WCDMA</item>
-    </string-array>
-    <string-array name="umts_network_preferences_values">
-        <item>0</item>
-        <item>2</item>
-    </string-array>
-    <string-array name="umts_network_preferences_choices_cmcc">
-        <item>GSM/TD-SCDMA (авторежим)</item>
-        <item>Только TD-SCDMA</item>
-    </string-array>
-    <string-array name="call_reject_mode_entries">
-        <item>Выключено</item>
-        <item>Все номера</item>
-        <item>Список автоотклонений</item>
-    </string-array>
-    <string-array name="call_reject_dialog_array">
-        <item>Контакты</item>
-        <item>Журнал вызовов</item>
-    </string-array>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <string-array name="clir_display_values">
         <item>Настройки сети по умолчанию</item>
         <item>Скрыть номер</item>
         <item>Показывать номер</item>
     </string-array>
-
 
 
 
@@ -124,6 +264,28 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <string-array name="list_language_entries">
         <item>Английский</item>
         <item>Французский</item>
@@ -142,10 +304,66 @@
 
 
 
+    <string-array name="gsm_umts_network_preferences_choices">
+        <item>GSM/WCDMA (авторежим)</item>
+        <item>Только WCDMA</item>
+        <item>Только GSM</item>
+    </string-array>
+    <string-array name="gsm_umts_network_preferences_values">
+        <item>0</item>
+        <item>2</item>
+        <item>1</item>
+    </string-array>
+    <string-array name="gsm_umts_network_preferences_choices_cmcc">
+        <item>GSM/TD-SCDMA (авторежим)</item>
+        <item>Только TD-SCDMA</item>
+        <item>Только GSM</item>
+    </string-array>
+
+
+
+
+
+    <string-array name="umts_network_preferences_choices">
+        <item>GSM/WCDMA (авторежим)</item>
+        <item>Только WCDMA</item>
+    </string-array>
+    <string-array name="umts_network_preferences_values">
+        <item>0</item>
+        <item>2</item>
+    </string-array>
+    <string-array name="umts_network_preferences_choices_1">
+        <item>GSM/WCDMA</item>
+        <item>Только WCDMA</item>
+    </string-array>
+
+
+
+
     <string-array name="cdma_system_select_choices">
         <item>Только домашняя</item>
         <item>Автоматически</item>
     </string-array>
+
+
+
+
+    <string-array name="cdma_roaming_mode_choices">
+        <item>Только домашняя сеть</item>
+        <item>Партнерские сети</item>
+        <item>Любая сеть</item>
+    </string-array>
+
+
+
+
+
+    <string-array name="cdma_network_preferences_choices">
+        <item>CDMA/EvDo</item>
+        <item>Только CDMA</item>
+        <item>Только EvDo</item>
+    </string-array>
+
 
 
 
@@ -178,15 +396,35 @@
 
 
 
-
-
-
-
     <string-array name="voicemail_notification_vibrate_when_entries">
         <item>Всегда</item>
         <item>Только при бесшумном</item>
         <item>Никогда</item>
     </string-array>
+
+
+
+
+
+    <string-array name="call_reject_mode_entries">
+        <item>Выключено</item>
+        <item>Все номера</item>
+        <item>Список автоотклонений</item>
+    </string-array>
+
+
+
+
+
+    <string-array name="call_reject_dialog_array">
+        <item>Контакты</item>
+        <item>Журнал вызовов</item>
+    </string-array>
+
+
+
+
+
 
 
 
@@ -198,9 +436,6 @@
         <item>Гитара</item>
         <item>Тихо</item>
     </string-array>
-
-
-
 
 
 
