--- a/Russian/main/Phone.apk/res/values-ru/plurals.xml
+++ b/Russian/main/Phone.apk/res/values-ru/plurals.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<!--Decompiled by BART-R (BurgerZ <az.burgerz@gmail.com)>--><resources>
     <plurals name="phone_in_ecm_notification_time">
         <item quantity="other">Подключение для передачи данных отсутствует %s мин.</item>
         <item quantity="one">Подключение для передачи данных отсутствует %s мин.</item>
